<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".mypages.CommunityRuleActivity">

    <TextView
        android:id="@+id/name_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="커뮤니티 이용규칙"
        android:textSize="20dp"
        android:textStyle="bold"
        android:textAlignment="center" />

    <ScrollView
        android:id="@+id/rule_scroll"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

        <TextView
            android:id="@+id/rule_text1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:lineSpacingMultiplier="1.2"
            android:text="@string/community_rule1"
            android:layout_marginTop="50dp"
            android:paddingLeft="20dp"
            android:textStyle="bold"
            android:textSize="18dp"
            android:textColor="@color/black"/>

            <TextView
                android:id="@+id/rule_text1_1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:lineSpacingMultiplier="1.2"
                android:text="@string/community_rule2"
                android:layout_marginTop="10dp"
                android:paddingLeft="20dp"
                android:paddingRight="20dp"
                android:textStyle="normal"
                android:textSize="14dp"
                android:textColor="@color/black"/>

            <TextView
                android:id="@+id/rule_text1_2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:lineSpacingMultiplier="1.2"
                android:text="@string/community_rule3"
                android:paddingLeft="20dp"
                android:paddingRight="20dp"
                android:textStyle="normal"
                android:textSize="14dp"
                android:textColor="@color/black"/>

            <TextView
                android:id="@+id/rule_text1_3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:lineSpacingMultiplier="1.2"
                android:text="@string/community_rule4"
                android:layout_marginTop="15dp"
                android:paddingLeft="20dp"
                android:textStyle="bold"
                android:textSize="18dp"
                android:textColor="@color/black"/>

            <TextView
                android:id="@+id/rule_text1_4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:lineSpacingMultiplier="1.2"
                android:text="@string/community_rule5"
                android:layout_marginTop="10dp"
                android:paddingLeft="20dp"
                android:paddingRight="20dp"
                android:textStyle="normal"
                android:textSize="14dp"
                android:textColor="@color/black"/>

            <TextView
                android:id="@+id/rule_text1_5"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:lineSpacingMultiplier="1.2"
                android:text="@string/community_rule6"
                android:paddingLeft="20dp"
                android:paddingRight="20dp"
                android:textStyle="normal"
                android:textSize="14dp"
                android:textColor="@color/black"/>

            <TextView
                android:id="@+id/rule_text1_6"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:lineSpacingMultiplier="1.2"
                android:text="@string/community_rule7"
                android:paddingLeft="20dp"
                android:paddingRight="20dp"
                android:textStyle="normal"
                android:textSize="14dp"
                android:textColor="@color/black"/>

            <TextView
                android:id="@+id/rule_text1_7"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:lineSpacingMultiplier="1.2"
                android:text="@string/community_rule8"
                android:paddingLeft="20dp"
                android:paddingRight="20dp"
                android:textStyle="normal"
                android:textSize="14dp"
                android:textColor="@color/black"/>

            <TextView
                android:id="@+id/rule_text1_8"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:lineSpacingMultiplier="1.2"
                android:text="@string/community_rule9"
                android:paddingLeft="20dp"
                android:paddingRight="20dp"
                android:textStyle="normal"
                android:textSize="14dp"
                android:textColor="@color/black"/>

            <TextView
                android:id="@+id/rule_text2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:lineSpacingMultiplier="1.2"
                android:text="@string/community_rule18"
                android:layout_marginTop="15dp"
                android:paddingLeft="20dp"
                android:textStyle="bold"
                android:textSize="18dp"
                android:textColor="@color/black"/>

            <TextView
                android:id="@+id/rule_text2_1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:lineSpacingMultiplier="1.2"
                android:text="@string/community_rule19"
                android:layout_marginTop="10dp"
                android:paddingLeft="20dp"
                android:paddingRight="20dp"
                android:textStyle="normal"
                android:textSize="14dp"
                android:textColor="@color/black"/>

            <TextView
                android:id="@+id/rule_text2_2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:lineSpacingMultiplier="1.2"
                android:text="@string/community_rule20"
                android:layout_marginTop="10dp"
                android:paddingLeft="20dp"
                android:paddingRight="20dp"
                android:textStyle="normal"
                android:textSize="14dp"
                android:textColor="@color/black"/>

            <TextView
                android:id="@+id/rule_text2_3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:lineSpacingMultiplier="1.2"
                android:text="@string/community_rule20"
                android:layout_marginTop="10dp"
                android:paddingLeft="20dp"
                android:paddingRight="20dp"
                android:textStyle="normal"
                android:textSize="14dp"
                android:textColor="@color/black"/>

            <TextView
                android:id="@+id/rule_text2_4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:lineSpacingMultiplier="1.2"
                android:text="@string/community_rule21"
                android:layout_marginTop="10dp"
                android:paddingLeft="20dp"
                android:paddingRight="20dp"
                android:textStyle="normal"
                android:textSize="14dp"
                android:textColor="@color/black"/>

            <TextView
                android:id="@+id/rule_text1_9"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:lineSpacingMultiplier="1.2"
                android:text="@string/community_rule10"
                android:layout_marginTop="15dp"
                android:paddingLeft="20dp"
                android:textStyle="bold"
                android:textSize="18dp"
                android:textColor="@color/black"/>

            <TextView
                android:id="@+id/rule_text1_10"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:lineSpacingMultiplier="1.2"
                android:text="@string/community_rule11"
                android:layout_marginTop="10dp"
                android:paddingLeft="20dp"
                android:paddingRight="20dp"
                android:textStyle="normal"
                android:textSize="14dp"
                android:textColor="@color/black"/>

            <TextView
                android:id="@+id/rule_text1_11"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:lineSpacingMultiplier="1.2"
                android:text="@string/community_rule12"
                android:layout_marginTop="5dp"
                android:paddingLeft="35dp"
                android:paddingRight="20dp"
                android:textStyle="normal"
                android:textSize="12dp"
                android:textColor="@color/black"/>

<!--            <TextView-->
<!--                android:id="@+id/rule_text1_12"-->
<!--                android:layout_width="match_parent"-->
<!--                android:layout_height="wrap_content"-->
<!--                android:lineSpacingMultiplier="1.2"-->
<!--                android:text="@string/community_rule13"-->
<!--                android:layout_marginTop="5dp"-->
<!--                android:paddingLeft="35dp"-->
<!--                android:paddingRight="20dp"-->
<!--                android:textStyle="normal"-->
<!--                android:textSize="12sp"-->
<!--                android:textColor="@color/black"/>-->

            <TextView
                android:id="@+id/rule_text1_13"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:lineSpacingMultiplier="1.2"
                android:text="@string/community_rule14"
                android:layout_marginTop="10dp"
                android:paddingLeft="20dp"
                android:paddingRight="20dp"
                android:textStyle="normal"
                android:textSize="14dp"
                android:textColor="@color/black"/>

            <TextView
                android:id="@+id/rule_text1_14"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:lineSpacingMultiplier="1.2"
                android:text="@string/community_rule15"
                android:layout_marginTop="5dp"
                android:paddingLeft="35dp"
                android:paddingRight="20dp"
                android:textStyle="normal"
                android:textSize="12dp"
                android:textColor="@color/black"/>

            <TextView
                android:id="@+id/rule_text1_15"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:lineSpacingMultiplier="1.2"
                android:text="@string/community_rule16"
                android:layout_marginTop="30dp"
                android:paddingLeft="20dp"
                android:paddingRight="20dp"
                android:textStyle="normal"
                android:textSize="14dp"
                android:textColor="@color/black"/>

            <TextView
                android:id="@+id/rule_text1_16"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:lineSpacingMultiplier="1.2"
                android:text="@string/community_rule17"

                android:paddingLeft="20dp"
                android:paddingRight="20dp"
                android:textStyle="normal"
                android:textSize="14dp"
                android:textColor="@color/black"/>

        </LinearLayout>
    </ScrollView>
</LinearLayout>